# magtag_gateway

./: .dockerignore  Cargo.toml  Dockerfile  NJD_before_linescore.json  NJD_during_01_linescore.json  NJD_during_05_linescore.json  NJD_pregame_linescore.json  Procfile  README.md  next.json
data/: NJD_after_linescore.json  NJD_before.json  NJD_during_02_linescore.json  NJD_during_03_linescore.json  NJD_during_04_linescore.json  NJD_during_06_linescore.json  NJD_during_07_linescore.json  barracuda.html  events.toml  next.json  p1_playoff.json  sjs_after.json  sjs_after_linescore.json  sjs_done.json  sjs_int_linescore.json  sjs_linescore_done.json
src/: main.rs
