[package]
name = "magtag_gateway"
version = "0.1.0"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", default-features = false, features = ["attributes", "std"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.123"
serde_json = "1.0"
surf = "2.2.0"
tide = "0.16.0"
