[package]
name = "magtag_gateway"
version = "0.1.0"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
async-std = { version = "1.9.0", default-features = false, features = ["attributes", "std"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
http-types = "2.10.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
serde = "1.0.123"
serde_json = "1.0"
structopt = "0.3.21"
surf = "2.2.0"
tide = "0.16.0"
